--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=courses-backend
+
+# H2 DB config
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Show SQL logs
+spring.jpa.show-sql=true
+
+# Auto-create tables
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 Web Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
