--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,41 @@
 version: "3.8"
 
 services:
+  postgres:
+    image: postgres:14
+    container_name: postgres-db
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: courses
+    ports:
+      - "5432:5432"
+    networks:
+      - backend-network
+
   backend:
     image: mohdafzal123/courses-backend:latest
     ports:
       - "8080:8080"
+    depends_on:
+      - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:h2:mem:testDB
-    # No need for depends_on, no DB service
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/courses
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=admin
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    networks:
+      - backend-network
 
   frontend:
     image: mohdafzal123/courses-frontend:latest
     ports:
-      - "5173:80"  # 80 inside container (nginx/Vite), exposed as 5173 outside
+      - "5173:80"
     depends_on:
       - backend
+    networks:
+      - backend-network
+
+networks:
+  backend-network:
+    driver: bridge
