--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.2</version> <!-- Use latest version -->
+		</dependency>
+
+
 		<!-- ✅ JPA for DB + H2 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
