--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,10 @@
-spring.application.name=courses-backend
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/courses
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-
-
-spring.datasource.url=jdbc:h2:mem:testDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-
-
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-# Auto schema creation
-spring.jpa.hibernate.ddl-auto=create
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
