--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,20 +10,28 @@ services:
       POSTGRES_DB: courses
     ports:
       - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - backend-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d courses"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   backend:
     image: mohdafzal123/courses-backend:latest
     ports:
       - "8080:8080"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/courses
-      - SPRING_DATASOURCE_USERNAME=admin
-      - SPRING_DATASOURCE_PASSWORD=admin
-      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/courses
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: admin
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
     networks:
       - backend-network
 
@@ -39,3 +47,6 @@ services:
 networks:
   backend-network:
     driver: bridge
+
+volumes:
+  postgres-data:
