--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	</properties>
 	<dependencies>
 
-		<!-- ✅ Spring Boot Starter for REST APIs -->
+		<!--  Spring Boot Starter for REST APIs -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -47,13 +47,13 @@
 		</dependency>
 
 
-		<!-- ✅ JPA for DB + H2 -->
+		<!--  JPA for DB + H2 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!-- ✅ Lombok (corrected: only once, with version + scope) -->
+		<!--  Lombok (corrected: only once, with version + scope) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -61,13 +61,13 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- ✅ Bean Validation -->
+		<!--  Bean Validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<!-- ✅ Devtools for hot reload -->
+		<!--  Devtools for hot reload -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -75,7 +75,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- ✅ Testing -->
+		<!--  Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -92,7 +92,7 @@
 
 	<build>
 		<plugins>
-			<!-- ✅ Compiler plugin with annotation processor -->
+			<!--  Compiler plugin with annotation processor -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -108,7 +108,7 @@
 				</configuration>
 			</plugin>
 
-			<!-- ✅ Spring Boot plugin (no lombok exclude) -->
+			<!--  Spring Boot plugin (no lombok exclude) -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
